questions/usersub/new/question3/error.txt
In file included from /home/koushal123/clashrc_2020/main_project/Clash-RC-Round-2-Backend/questions/usersub/new/question3/question1.cpp:1:0:
/home/koushal123/clashrc_2020/main_project/Clash-RC-Round-2-Backend/Sandboxing/include/sandbox.h: In function ‘void install_filters()’:
/home/koushal123/clashrc_2020/main_project/Clash-RC-Round-2-Backend/Sandboxing/include/sandbox.h:10:19: error: ‘PR_SET_SECCOMP’ was not declared in this scope
             prctl(PR_SET_SECCOMP, SECCOMP_MODE_FILTER, &bpf);
                   ^~~~~~~~~~~~~~
/home/koushal123/clashrc_2020/main_project/Clash-RC-Round-2-Backend/Sandboxing/include/sandbox.h:10:19: note: suggested alternative: ‘AUDIT_SECCOMP’
             prctl(PR_SET_SECCOMP, SECCOMP_MODE_FILTER, &bpf);
                   ^~~~~~~~~~~~~~
                   AUDIT_SECCOMP
/home/koushal123/clashrc_2020/main_project/Clash-RC-Round-2-Backend/Sandboxing/include/sandbox.h:10:57: error: ‘bpf’ was not declared in this scope
             prctl(PR_SET_SECCOMP, SECCOMP_MODE_FILTER, &bpf);
                                                         ^~~
/home/koushal123/clashrc_2020/main_project/Clash-RC-Round-2-Backend/Sandboxing/include/sandbox.h:10:13: error: ‘prctl’ was not declared in this scope
             prctl(PR_SET_SECCOMP, SECCOMP_MODE_FILTER, &bpf);
             ^~~~~
